--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    Hello, world! Hello, again! Hello a thrid time! YEee
+    Hello, world! Hello, again! Hello a thrid time!
 
 </body>
 
