--- a/hello.html
+++ b/hello.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
+
     <titel>My Webpage!</titel>
+
 </head>
 
-<body>
-    Hello, world!
-
-</body>
+<body>Hello, world!</body>
 
 </html>
