--- a/hello.html
+++ b/hello.html
@@ -3,10 +3,14 @@
 
 <head>
 
-    <titel>My Webpage!</titel>
+    <titel>
+        My Webpage!
+    </titel>
 
 </head>
 
-<body>Hello, world!</body>
+<body>
+    Hello, world!
+</body>
 
 </html>
