--- a/HTML.html
+++ b/HTML.html
@@ -3,19 +3,12 @@
 
 <head>
 
-  <titel>
-    My Webpage!
-  </titel>
+  <titel>link</titel>
 
 </head>
 
 <body>
-  <h1>This is the largest headline</h1>
-  <h2>This is also a large headline</h2>
-  <h3>This is a slightly smaller headline</h3>
-  <h4>This is a even smaller headline</h4>
-  <h5>This is the second-smallest headline</h5>
-  <h6>This is the smallest headline</h6>
+  Search for <a href="https://www.google.de/search?q=cats">cats</a>.
 </body>
 
 </html>
