--- a/HTML.html
+++ b/HTML.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/ />
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/ />
+        <link href="css.css" rel="stylesheet" />
+        <titel>Homepage</titel>
 
-  <titel>link</titel>
-
-</head>
-
-<body>
-  Search for <a href="https://www.google.de/search?q=cats">cats</a>.
-</body>
-
+    </head>
+    <body>
+        <p>
+            Search for <a href="https://www.google.de/search?q=cats">cats</a>.
+        </p>
+    </body>
 </html>
