--- a/HTML.html
+++ b/HTML.html
@@ -8,8 +8,14 @@
 
     </head>
     <body>
-        <p>
+        <header>
             Search for <a href="https://www.google.de/search?q=cats">cats</a>.
-        </p>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
