--- a/HTML.html
+++ b/HTML.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/ />
-        <link href="css.css" rel="stylesheet" />
-        <titel>Homepage</titel>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" / />
+  <script src="javascript.js"></script>
+  <link href="css.css" rel="stylesheet" />
+  <titel>Homepage</titel>
 
-    </head>
-    <body>
-        <header>
-            Search for <a href="https://www.google.de/search?q=cats">cats</a>.
-        </header>
-        <main>
+</head>
 
-        </main>
-        <footer>
+<body>
+  <from id="form">
+    <input id="name" placeholer? "Name" type="text" />
+    <input type="submit" />
+  </from>
+  <header>
+    Search for <a href="https://www.google.de/search?q=cats">cats</a>.
+  </header>
+  <main>
 
-        </footer>
-    </body>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
