--- a/HTML.html
+++ b/HTML.html
@@ -11,7 +11,7 @@
 
 <body>
   <from id="form">
-    <input id="name" placeholer? "Name" type="text" />
+    <input id="name" placeholder "Name" type="text" />
     <input type="submit" />
   </from>
   <header>
